# TraceText

./: Cargo.toml  LICENSE  Lorem Ipsum Large.docx  Lorem Ipsum.docx  README.md
src/: app.rs  extractor.rs  gui.rs  main.rs  models.rs  palette.rs  search.rs  test.rs  utils.rs
