[package]
name = "TraceText"
version = "0.1.0"
edition = "2024"

[dependencies]
unpdf = "0.7.0"
undoc = "0.5.2"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
unicode-normalization = "0.1.25"
unicode-segmentation = "1.13.3"
aho-corasick = "1.1.4"
compact_str = { version = "0.9.1", features = ["serde"] }
rayon = "1.12.0"
nucleo-matcher = "0.3.1"
eframe = "0.34.3"
egui_extras = "0.34.3"
rfd = "0.17.2"
rust_xlsxwriter = "0.95.0"