[package]
name = "TraceText"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
libreoffice-pure = "0.4.8"
pdfium-render = "0.9.2"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.13.3"
aho-corasick = "1.1.4"
compact_str = { version = "0.9.1", features = ["serde"] }
rayon = "1.12.0"
nucleo-matcher = "0.3.1"
eframe = "0.34.3"
egui_extras = "0.34.3"
rfd = "0.17.2"
rust_xlsxwriter = "0.95.0"
arboard = "3.6.1"
strsim = "0.11.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true